# quine-rs

./: COPYING  Cargo.toml  README.md  quine-rs.1
src/: main.rs
